deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: whoami
  name: whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      run: whoami
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: whoami
    spec:
      containers:
      - image: containous/whoami
        name: whoami
        livenessProbe:
                httpGet:
                    path: /
                    port: 80
        readinessProbe:
                httpGet:
                    path: /
                    port: 80
                
        ports:
        - containerPort: 80
        resources: {}
status: {}
